image not in site but point is on

--- a/src/main/resources/templates/Taco Cloud.html
+++ b/src/main/resources/templates/Taco Cloud.html
@@ -7,7 +7,8 @@ xml:th="http://www.thymeleaf.org">
 </head>
 <body>
 <h1>Welcome to ...</h1>
-<img th:src="@{/images/lily.png}"/>
-
+<h1>Taco cloud is a finest of food </h1>
+<img src="/images/TacoCloud.jpg">
+<h1>Taco cloud is a very finest of the hot  food </h1>
 </body>
 </html>
